--- a/style.css
+++ b/style.css
@@ -1,16 +1,37 @@
 body{
-    margin: 0;
-    padding: 0;
-    list-style: none;
+    background-color: lightcoral; /* sets background color */
+    display: flex; /* makes body a flex container */
+    /* sets the table center and all its content */
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+table{
+    /* sets the table center and all its content */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 body{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: lightsalmon;
-    color: #333;
-    line-height: 1.6;
-    display: flex;
-    justify-content: center;
-    align-items: right;
-    margin: 20px;
+    font-family: Arial, Helvetica, sans-serif; /* sets font style */
+
+}
+
+h1{
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* adds shadow to title */
+}
+
+h1, h2, h3, h4{
+    text-decoration: underline; /* adds underline to titles */
+}
+
+a{
+    text-decoration: none; /* removes underline from links */
+}
+
+a:hover{
+    transform: scale(2.0); /* magnifies links */
 }
